changed map to ImmutableMap in GcsTestUtils